css/src/columns.scss
@import "_devices.scss";

// 5 columns layout
// https://blog.polarbits.co/2014/02/16/quick-tips-5-column-layout-with-twitter-bootstrap/
.col-xs-5ths,
.col-sm-5ths,
.col-md-5ths,
.col-lg-5ths {
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
}
.col-xs-5ths {
  width: 20%;
  float: left;
}
@media (min-width: 768px) {
  .col-sm-5ths {
    width: 20%;
    float: left;
  }
}
@media (min-width: 992px) {
  .col-md-5ths {
    width: 20%;
    float: left;
  }
}
@media (min-width: 1200px) {
  .col-lg-5ths {
    width: 20%;
    float: left;
  }
}

.extra > .blog-post-body {
  p {
    margin: 0;
  }
  .row {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    flex-wrap: wrap;

    .compact {
      width: 80%;
      margin-left: auto;
      margin-right: auto;

      @media #{$mobile} {
        width: 100%;
      }

      > [class*="col-"] {
        display: flex;
        flex-direction: column;
        padding: 22px 15px 22px 15px;

        @media #{$mobile} {
          margin-left: auto;
          margin-right: auto;
          padding-left: 5px;
          padding-right: 5px;
        }
      }
      > .center {
        max-width: 195px;
      }
    }

    .fake {
      max-height: 0;

      [class*="col-"] {
        padding: 0;
      }
    }
  }
  > .row {
    > [class*="col-"] {
      display: flex;
      flex-direction: column;
      padding: 62px 35px;

      @media #{$tablet} {
        padding: 16px 30px;
      }
    }

    &.no-top-margin {
      > [class*="col-"] {
        padding-top: 0;
      }
    }

    &.no-bottom-margin {
      > [class*="col-"] {
        padding-bottom: 0;
      }
    }
  }
}

.col-extra {
  justify-content: center;

  &:before {
    background-color: inherit;
    content: "";
    @media #{$tablet} {
      content: none;
    }
    position: absolute;
    height: 100%;
    z-index: -1;
    width: 100vw;
  }
  &:first-of-type:before {
    right: 0;
  }
  &:last-of-type:before {
    left: 0;
  }
  &:only-of-type:before {
    width: 200vw;
    left: -50vw;
  }

  padding-bottom: 5px;
  padding-top: 10px;
}

.no-bottom-margin {
  .col-extra:before {
    margin-top: -31px;

    @media #{$tablet} {
      margin-top: -8px;
    }
  }
}
.no-top-margin {
  .col-extra:before {
    margin-top: 31px;

    @media #{$tablet} {
      margin-top: 8px;
    }
  }
  &.no-bottom-margin {
    .col-extra:before {
      margin-top: 0;
    }
  }
}

.blog-list {
  padding: 20px;

  h3 {
    font-weight: 400;
  }
}

